# domo-tech-rag-fastapi

./: Dockerfile  main-old.py  main.py  pyproject.toml  requirements.txt
chroma_db/2106e9af-a86e-4f86-92cb-8784ace3b9bd/: index_metadata.pickle
data/: ai-service-layer-api.md  api-reference-overview.md  app-db-api.md  automated-machine-learning-auto-ml.md  code-engine-api.md  data-api.md  data-science-accelerators.md  data-science-webinars.md  domo-ai-resources-guide.md  domo-ai.md  domo-developer-portal.md  domo-sd-ks.md  file-set-api-beta.md  files-api.md  fileset-api-beta.md  groups-api.md  jupyter-workspaces.md  magic-etl-data-science-tiles.md  magic-etl-scripting-tiles.md  task-center-api.md  user-api.md  workflows-api.md
db/: mongodb.py  test_connection.py
embedding/: embedding.py
helper/: token.py
rag/: rag_retrivel.py
vectorstore/: vectorstore.py
